--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,12 +1,19 @@
+@font-face {
+  font-family: KinetikaRegular;
+  src: url(../assets/fonts/KinetikaRegular.ttf);
+}
+
+@keyframes animated-border {
+  0% {
+    box-shadow: 0 0 0 0 rgba(255,255,255,0.4);
+  }
+  100% {
+     box-shadow: 0 0 0 20px rgba(255,255,255,0);
+  }
+}
 
 .App {
   text-align: center;
-  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
-   background: #acb6e5;   /*fallback for old browsers  */
-  background: -webkit-linear-gradient(to right, #93a5cf, #e4efe9);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #93a5cf, #e4efe9);  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	/* background-size: 100% 100%;  */
-  /* background: linear-gradient(270.03deg, rgba(108, 175, 215, 0.6) 6.35%, rgba(194, 224, 242, 0) 114.48%); */
   background-image: url(../assets/images/appBackground.svg);
   background-repeat:no-repeat; 
   background-size:contain;
@@ -21,22 +28,27 @@
   align-items:space-between;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.aboutUs {
+  width:50%;
+  height:10%;
+  position:absolute;
+  left:10%;
+  top:40%;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text {
+  font-size:3vmin;
+  line-height: 1.5; 
+  font-family:KinetikaRegular; 
+  box-sizing:border-box;
+  padding:10%;
+  text-align:center; 
+  border:1px solid white;
+  border-radius:30px;
+  animation: animated-border 1.5s infinite;
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
 }
 
-.App-link {
-  color: #61dafb;
-}
+
