--- a/src/components/header-component/headerCss.css
+++ b/src/components/header-component/headerCss.css
@@ -34,8 +34,8 @@
 }
 
 @font-face {
-    font-family: AguafinaScript;
-    src: url(../../assets/fonts/AguafinaScript-Regular.ttf);
+    font-family: Handycheera;
+    src: url(../../assets/fonts/Handycheera.otf);
 }
 
 .link {
@@ -52,7 +52,7 @@
     -webkit-text-stroke: 2px white;
 }
 .seeYou{
-    font-family:AguafinaScript;
+    font-family:Handycheera;
     font-size:calc(2.5vh + 2.5vw);
     color:white;
 }
