--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,16 @@
 @font-face {
-  font-family: KinetikaRegular;
-  src: url(../assets/fonts/KinetikaRegular.ttf);
+  font-family: Nunito;
+  src: url(../assets/fonts/Nunito-Light.ttf);
+}
+
+@font-face {
+  font-family: NunitoSemiBold;
+  src: url(../assets/fonts/Nunito-SemiBoldItalic.ttf);
+}
+
+@font-face {
+  font-family: Handycheera;
+  src: url(../assets/fonts/Handycheera.otf);
 }
 
 @keyframes animated-border {
@@ -12,6 +22,8 @@
   }
 }
 
+@import "~react-image-gallery/styles/css/image-gallery.css";
+
 .App {
   text-align: center;
   background-image: url(../assets/images/appBackground.svg);
@@ -19,7 +31,7 @@
   background-size:contain;
   background-position:bottom;
   background-attachment: fixed;
-  height: 500vh;
+  height: 800vh;
   width: 100%;
   margin:auto;
   display:flex;
@@ -30,11 +42,13 @@
 
 
 .text {
-  font-size:3vmin;
+  font-size:2.7vmin;
   line-height: 1.5; 
-  font-family:KinetikaRegular; 
+  font-family:Nunito; 
   box-sizing:border-box;
-  padding:10%;
+  padding:3%;
+  width: 50%;
+  height: 1%;
   text-align:center; 
   border:1px solid white;
   border-radius:30px;
@@ -43,28 +57,167 @@
   -webkit-backdrop-filter: blur(15px);
 }
 
-.aboutUs {
+.textTitle {
+  font-size:3.5vmin;
+  line-height: 1.5; 
+  font-family:NunitoSemiBold; 
+  box-sizing:border-box;
+  padding-bottom:2%; 
+  text-align:center; 
+  
+}
+
+#lucky1 {
+  width:40%;
+  height:auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#LM1 {
+  width:100%;
+  position:absolute;
+  top:29%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  align-items: center;
+  padding:2% 5%;
+}
+
+#lucky2 {
+  width:40%;
+  height:auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#LM2 {
+  width:100%;
+  position:absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  align-items: center;
+  padding:2% 5%;
+  top:38.5%;
+}
+
+#lucky3 {
+  width:40%;
+  height:auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#LM3 {
+  width:100%;
+  position:absolute;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  align-items: center;
+  padding:2% 5%;
+  top:48%;
+}
+
+#lucky4 {
+  width:40%;
+  height:auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#LM4 {
+  width:100%;
+  position:absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  align-items: center;
+  padding:2% 5%;
+  top:56%;
+}
+
+#asocijacija{
+  width:40%;
+  height:auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#AK {
+  width:100%;
+  position:absolute;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  align-items: center;
+  padding: 0% 5%;
+  top:65%;
+}
+
+#aidaFoto{
+  width:25%;
+  height:auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#Aida{
+  width:100%;
+  position:absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  align-items: center;
+  padding:2% 5%;
+  top:75%;
+  
+}
+
+#ucestvuj{
+  font-family: Handycheera;
+  font-size: 10vmin;
+}
+
+.form{
+  width: 50%;
+  height: 10%;
+  position: absolute;
+  left: 25%;
+  top: 690vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family:Nunito; 
+
+}
+
+input {
   width:50%;
-  height:10%;
-  position:absolute;
-  left:10%;
-  top:40%;
+  height:12%;
+  position: relative;
+  left: 25%;
+  border:1px solid white;
+  border-radius:30px;
+  animation: animated-border 1.5s infinite;
+  box-sizing: border-box;
+  padding: 1% 3%;
+  font-family:Nunito; 
+  font-size: 3vmin;
 }
 
-.Aida{
-  width:40%;
-  height:10%;
-  position:absolute;
-  top:70%;
-  left:10%;
+button[type=submit] {
+  width: 60%;
+  height:12%;
+  position: relative;
+  left: 20%;
+  background-color: #212d4a;
+  color: white;
+  border:1px solid #212d4a;
+  border-radius:30px;
+  font-family:Nunito; 
+  font-size: 3vmin;
+  
 }
-
-.AK{
-  width:40%;
-  height:10%;
-  position:absolute;
-  left:50%;
-  top:55%;
-}
-
-
