--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31,7 +31,7 @@
   background-size:contain;
   background-position:bottom;
   background-attachment: fixed;
-  height: 800vh;
+  height: 900vh;
   width: 100%;
   margin:auto;
   display:flex;
@@ -40,6 +40,14 @@
   align-items:space-between;
 }
 
+/* .gallery {
+  border:1px solid white;
+  border-radius:30px;
+  animation: animated-border 1.5s infinite;
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  padding: 2%;
+} */
 
 .text {
   font-size:2.7vmin;
@@ -47,7 +55,7 @@
   font-family:Nunito; 
   box-sizing:border-box;
   padding:3%;
-  width: 50%;
+  width: 40%;
   height: 1%;
   text-align:center; 
   border:1px solid white;
@@ -68,7 +76,7 @@
 }
 
 #lucky1 {
-  width:40%;
+  width:50%;
   height:auto;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -76,7 +84,7 @@
 #LM1 {
   width:100%;
   position:absolute;
-  top:29%;
+  top:27%;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-evenly;
@@ -86,7 +94,7 @@
 }
 
 #lucky2 {
-  width:40%;
+  width:50%;
   height:auto;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -100,11 +108,11 @@
   box-sizing: border-box;
   align-items: center;
   padding:2% 5%;
-  top:38.5%;
+  top:37%;
 }
 
 #lucky3 {
-  width:40%;
+  width:50%;
   height:auto;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -118,11 +126,11 @@
   box-sizing: border-box;
   align-items: center;
   padding:2% 5%;
-  top:48%;
+  top:47%;
 }
 
 #lucky4 {
-  width:40%;
+  width:50%;
   height:auto;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -140,7 +148,7 @@
 }
 
 #asocijacija{
-  width:40%;
+  width:50%;
   height:auto;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -154,11 +162,11 @@
   box-sizing: border-box;
   align-items: center;
   padding: 0% 5%;
-  top:65%;
+  top:67%;
 }
 
 #aidaFoto{
-  width:25%;
+  width:30%;
   height:auto;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -172,7 +180,7 @@
   box-sizing: border-box;
   align-items: center;
   padding:2% 5%;
-  top:75%;
+  top:76%;
   
 }
 
@@ -183,10 +191,10 @@
 
 .form{
   width: 50%;
-  height: 10%;
+  height: 8%;
   position: absolute;
   left: 25%;
-  top: 690vh;
+  top: 785vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -196,7 +204,7 @@
 
 input {
   width:50%;
-  height:12%;
+  height:10%;
   position: relative;
   left: 25%;
   border:1px solid white;
@@ -205,12 +213,12 @@ input {
   box-sizing: border-box;
   padding: 1% 3%;
   font-family:Nunito; 
-  font-size: 3vmin;
+  font-size: 2.5vmin;
 }
 
 button[type=submit] {
   width: 60%;
-  height:12%;
+  height:10%;
   position: relative;
   left: 20%;
   background-color: #212d4a;
@@ -218,6 +226,6 @@ button[type=submit] {
   border:1px solid #212d4a;
   border-radius:30px;
   font-family:Nunito; 
-  font-size: 3vmin;
+  font-size: 2.5vmin;
   
 }
