--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -38,8 +38,14 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    height: 100vh;
+
   } 
 }
+
+.header {
+  height: 100vh;
+} 
 
 .App {
   text-align: center;
@@ -248,7 +254,16 @@ button[type=submit] {
 
 .footer{
   font-family:Nunito; 
-
+  height:20vh;
+        width:100%;
+        box-sizing:border-box;
+        position:absolute;
+        top:880vh;
+        background: #212d4a; 
+        color:white;
+        display:flex;
+        justify-content:space-evenly;
+        align-items:center;
 }
 
 
@@ -272,12 +287,12 @@ button[type=submit] {
   } 
   
   .text {
-    font-size:3.5vmin;
+    font-size:calc(1vh + 2vw + 1vmin);
     line-height: 1.5; 
     font-family:Nunito; 
     box-sizing:border-box;
     padding:3%;
-    width: 100%;
+    width: 90%;
     height: 40%;
     text-align:center; 
     border:1px solid white;
@@ -286,29 +301,37 @@ button[type=submit] {
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
   }
+  .textTitle {
+    font-size:calc(1vh + 2vw + 2vmin);
+       
+  }
 
   .gallery {
     width: 90%;
     position:absolute;
     /* // height: 20%; */
-    top:14%;
+    top:13%;
     left:5%;
     justify-content: center;
     box-sizing:border-box;
-    /* // padding:"5% 10%", */
+    /* // padding:"5% 10%"; */
   } 
   #LM1 {
     width:100%;
     position:absolute;
-    top:27%;
+    top:21%;
     display: flex;
     flex-direction: column-reverse;
     justify-content: space-evenly;
   }
 
+  #lucky1, #lucky2, #lucky3, #lucky4, #asocijacija, #aidaFoto {
+    width:100%;
+    margin:5% 3%;
+  }
+
   #LM2 {
     width:100%;
-    height:100vh;
     position:absolute;
     display: flex;
     flex-direction: column-reverse;
@@ -316,7 +339,7 @@ button[type=submit] {
     box-sizing: border-box;
     align-items: center;
     padding:2% 5%;
-    top:37%;
+    top:33%;
   }
 
   #LM3 {
@@ -328,7 +351,7 @@ button[type=submit] {
     box-sizing: border-box;
     align-items: center;
     padding:2% 5%;
-    top:47%;
+    top:43.5%;
   }
 
   #LM4 {
@@ -340,7 +363,7 @@ button[type=submit] {
     box-sizing: border-box;
     align-items: center;
     padding:2% 5%;
-    top:56%;
+    top:55%;
   }
 
   #AK {
@@ -352,7 +375,7 @@ button[type=submit] {
     box-sizing: border-box;
     align-items: center;
     padding: 0% 5%;
-    top:67%;
+    top:64%;
   }
 
   #Aida{
@@ -364,8 +387,37 @@ button[type=submit] {
     box-sizing: border-box;
     align-items: center;
     padding:2% 5%;
-    top:76%;
+    top:75%;
     
+  }
+
+  .form{
+    width: 100%;
+    height: 8%;
+    left: 0%;
+    top: 785vh;
+  
+  }
+  
+  input {
+    width:80%;
+    position: relative;
+    left: 10%;
+    font-size: 2.5vmin;
+  }
+  
+  button[type=submit] {
+    width: 80%;
+    height:10%;
+    position: relative;
+    left: 10%;
+    font-family:Nunito; 
+    font-size: 2.5vmin;
+    
+  }
+
+  .footer {
+    display: none;
   }
   
 }
